test/k8s/manifests/ccnp-update-allow-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ccnp-update"
spec:
  description: "Policy with the same name as ccnp-update-allow-all to test CCNP update"
  endpointSelector:
    matchLabels:
      id: app1
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: app2
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
